Added structure to index, and basic styling to make it comprehendable

--- a/src/auth.html
+++ b/src/auth.html
@@ -9,7 +9,7 @@
 	<body>
 		<nav class="auth_nav">
 			<h2>Demodel</h2>
-			<div>
+			<div class="auth_nav_links">
 				<a>Github</a>
 				<a>Docs</a>
 			</div>
