--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 		<nav class="index_nav">
 			<h2>Demodel</h2>
 			<div class="auth_nav_links">
-				<a>Github</a>
+				<a href="https://github.com/logscore/startup">Github</a>
 				<a>Docs</a>
 			</div>
 		</nav>
@@ -25,7 +25,7 @@
 					<button>Configuration</button>
 					<button>Models</button>
 					<button>Docs</button>
-					<button>Deploy</button>
+					<button>CI/CD (Github API)</button>
 				</div>
 
 				<div>
