Made the deliverable things way more obvious and added what i did to the README

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,11 @@
 		<nav class="index_nav">
 			<h2>Demodel</h2>
 			<div class="auth_nav_links">
-				<a href="https://github.com/logscore/startup">Github</a>
+				<a
+					style="font-size: 4rem"
+					href="https://github.com/logscore/startup"
+					>Github Link Click Me</a
+				>
 				<a>Docs</a>
 			</div>
 		</nav>
