--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 		<nav class="auth_nav">
 			<h2>Demodel</h2>
 			<div class="auth_nav_links">
-				<a href="https://github.com/logscore/startup">Github</a>
-				<a>Docs</a>
+				<a
+					style="font-size: 4rem"
+					href="https://github.com/logscore/startup"
+					>Github Link Click Me</a
+				>
+				<a href="https://docs.demodel.click/">Docs</a>
 			</div>
 		</nav>
 		<div class="auth_container">
@@ -19,7 +23,7 @@
 				<div class="welcome_text">
 					<span>😍</span>
 					<h1>Hey there!</h1>
-					<p>Ready to ship better code?</p>
+					<p>Ready to not write all your types?</p>
 				</div>
 				<div class="email">
 					<label>Email</label>
@@ -39,7 +43,7 @@
 						placeholder="Secure Password"
 					/>
 				</div>
-				<a href="./dashboard.html">Sign In</a>
+				<a style="font-size: 4rem" href="./dashboard.html">CLICK ME</a>
 			</div>
 		</div>
 	</body>
