--- a/account.html
+++ b/account.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="./styles/auth_style.css" />
-		<title>Sign Up</title>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="./styles/account_style.css"
+		/>
+		<title>Demodel</title>
 	</head>
 	<body>
 		<nav class="index_nav">
@@ -29,42 +33,17 @@
 				</button>
 			</div>
 		</nav>
-		<div class="auth_container">
-			<div class="auth_box">
-				<div class="welcome_text">
-					<span>😍</span>
-					<h1>Hey there!</h1>
-					<p>Ready to not write all your types?</p>
-				</div>
-				<div class="email">
-					<label>Email</label>
-					<input
-						type="email"
-						id="email"
-						class="email_input"
-						placeholder="Your Email"
-					/>
-				</div>
-				<div class="password">
-					<label>Password</label>
-					<input
-						type="password"
-						id="password"
-						class="password_input"
-						placeholder="Secure Password"
-					/>
-				</div>
-				<button onclick="location.href='/dashboard.html';">
-					Sign In
-				</button>
+		<main class="content_container">
+			<div class="account_box">
+				<button classonclick="signOut()">Sign out</button>
 			</div>
-		</div>
+		</main>
 	</body>
 	<footer>Copyleft: Demodel Corp.</footer>
 
 	<script>
-		function signIn() {
-			// Implement sign in logic
+		function signOut() {
+			// implement signout login here. Just delete a cookie andrefresh the page. Maybe redirect to login page.
 		}
 	</script>
 </html>
