--- a/dashboard.html
+++ b/dashboard.html
@@ -12,83 +12,89 @@
 	</head>
 	<body>
 		<nav class="index_nav">
-			<h2>Demodel</h2>
-			<div class="auth_nav_links">
+			<h2
+				class="title"
+				onclick="location.href='/dashboard.html';"
+				style="cursor: pointer"
+			>
+				Demodel
+			</h2>
+			<div class="nav_links">
 				<button
 					onclick="location.href='https://github.com/logscore/startup';"
 				>
 					<img src="./assets/github.svg" alt="GitHub" />
 				</button>
-
 				<button class="docs_button">
 					<img src="./assets/docs.svg" alt="Documentation" />
 				</button>
+				<button onclick="location.href='/account.html';">
+					<img src="./assets/user_account.svg" alt="User account" />
+				</button>
 			</div>
 		</nav>
-		<main>
-			<div class="content_container">
-				<div class="side_nav">
-					<button>
-						<img src="./assets/gear-settings.svg" />
-					</button>
-					<button>
-						<img src="./assets/sdk-code-icon.svg" />
-					</button>
-					<button>
-						<img src="./assets/git-compare.svg" />
-					</button>
-				</div>
-
-				<div class="config_box">
-					<h2>Configuration</h2>
-					<div class="input_element">
-						<label>Project Name</label>
-						<input placeholder="your-cool-project" />
-					</div>
-					<div class="input_element">
-						<label>Version</label>
-						<input placeholder="1.0.0" />
-					</div>
-					<div class="input_element">
-						<button>Import</button>
-					</div>
-					<div class="langs">
-						<label class="langs_label">Languages</label>
-						<div class="lang_boxes">
-							<input
-								type="checkbox"
-								class="checkbox"
-								name="language1"
-								value="python"
-							/>
-							<label for="lang1"> Python</label><br />
-							<input
-								type="checkbox"
-								class="checkbox"
-								name="language2"
-								value="typescript"
-							/>
-							<label for="lang2"> Typescript</label><br />
-							<input
-								type="checkbox"
-								class="checkbox"
-								name="language3"
-								value="go"
-							/>
-							<label for="lang3"> Go</label><br />
-						</div>
-					</div>
-					<button>Go!</button>
-				</div>
-				<textarea>
-Text area to edit the OpenAPI spec. I'll probably try to implement the Monaco editor here</textarea
-				>
-				<textarea>
-Type Here (I'll also use this as the websocket implementation. Changes to the specs will be live updated here without refreshing)</textarea
-				>
+		<main class="content_container">
+			<div class="side_nav">
+				<button onclick="location.href='/dashboard.html'">
+					<img src="./assets/gear-settings.svg" />
+				</button>
+				<button onclick="location.href='/models.html'">
+					<img src="./assets/sdk-code-icon.svg" />
+				</button>
+				<button onclick="location.href='/version_control.html'">
+					<img src="./assets/git-compare.svg" />
+				</button>
 			</div>
-			<div>Rows with the parsed routes and models stored in the db</div>
+
+			<div class="content_box">
+				<h2>Configuration</h2>
+				<div class="input_element">
+					<label>Project Name</label>
+					<input placeholder="your-cool-project" />
+				</div>
+				<div class="input_element">
+					<label>Version</label>
+					<input placeholder="1.0.0" />
+				</div>
+				<div class="input_element">
+					<button>Import</button>
+				</div>
+				<div class="langs">
+					<label class="langs_label">Languages</label>
+					<div class="lang_boxes">
+						<input
+							type="checkbox"
+							class="checkbox"
+							name="language1"
+							value="python"
+						/>
+						<label for="lang1"> Python</label><br />
+						<input
+							type="checkbox"
+							class="checkbox"
+							name="language2"
+							value="typescript"
+						/>
+						<label for="lang2"> Typescript</label><br />
+						<input
+							type="checkbox"
+							class="checkbox"
+							name="language3"
+							value="go"
+						/>
+						<label for="lang3"> Go</label><br />
+					</div>
+				</div>
+				<button>Go!</button>
+			</div>
+			<textarea>
+Text area to edit the OpenAPI spec. I'll probably try to implement the Monaco editor here</textarea
+			>
+			<textarea>
+Type Here (I'll also use this as the websocket implementation. Changes to the specs will be live updated here without refreshing)</textarea
+			>
 		</main>
-		<footer>Copyleft: Demodel Corp.</footer>
+		<div>Rows with the parsed routes and models stored in the db</div>
 	</body>
+	<footer>Copyleft: Demodel Corp.</footer>
 </html>
