added styles for the models page

--- a/models.html
+++ b/models.html
@@ -6,7 +6,7 @@
 		<link
 			rel="stylesheet"
 			type="text/css"
-			href="./styles/dashboard_style.css"
+			href="./styles/models_style.css"
 		/>
 		<title>Demodel</title>
 	</head>
