--- a/version_control.html
+++ b/version_control.html
@@ -55,9 +55,7 @@
 				</button>
 			</div>
 
-			<div class="content_box">
-				Display previous version and allow to push to GitHub.
-			</div>
+			<div class="content_box">Button to push to GitHub</div>
 		</main>
 	</body>
 	<footer>Copyleft: Demodel Corp.</footer>
