Added styling to the roputes element

--- a/dashboard.html
+++ b/dashboard.html
@@ -87,14 +87,13 @@
 				</div>
 				<button>Go!</button>
 			</div>
-			<textarea>
+			<textarea class="monaco_editor">
 Text area to edit the OpenAPI spec. I'll probably try to implement the Monaco editor here</textarea
 			>
-			<textarea>
-Type Here (I'll also use this as the websocket implementation. Changes to the specs will be live updated here without refreshing)</textarea
-			>
 		</main>
-		<div>Rows with the parsed routes and models stored in the db</div>
+		<div class="routes">
+			Rows with the parsed routes and models stored in the db
+		</div>
 	</body>
 	<footer>Copyleft: Demodel Corp.</footer>
 </html>
