Added placeholder parsed rows and styling for them. I still don't know if I want this to have that functionality, or if I just want to add a random webhook here.

--- a/dashboard.html
+++ b/dashboard.html
@@ -92,7 +92,27 @@ Text area to edit the OpenAPI spec. I'll probably try to implement the Monaco ed
 			>
 		</main>
 		<div class="routes">
-			Rows with the parsed routes and models stored in the db
+			<table>
+				<tr>
+					<td><p>/POST</p></td>
+					<td><p>/pets/{id}</p></td>
+					<td><button>Models</button></td>
+				</tr>
+				<tr>
+					<td>
+						<p>/DELETE</p>
+					</td>
+					<td><p>/pets/{id}</p></td>
+					<td><button>Models</button></td>
+				</tr>
+				<tr>
+					<td>
+						<p>/CREATE</p>
+					</td>
+					<td><p>/food</p></td>
+					<td><button>Models</button></td>
+				</tr>
+			</table>
 		</div>
 	</body>
 	<footer>Copyleft: Demodel Corp.</footer>
