Fixed auth style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="auth_box">
 				<div class="welcome_text">
 					<span>😍</span>
-					<h1>Hey there!</h1>
+					<h1 class="auth_title">Hey there!</h1>
 					<p>Ready to not write all your types?</p>
 				</div>
 				<div class="email">
