--- a/models.html
+++ b/models.html
@@ -9,6 +9,7 @@
 			href="./styles/models_style.css"
 		/>
 		<title>Demodel</title>
+		<link rel="shortcut icon" href="assets/favicon.svg" type="image/svg" />
 	</head>
 	<body>
 		<nav class="index_nav">
