Fixed footer styling and added dynamic mobile styling rules

--- a/account.html
+++ b/account.html
@@ -36,7 +36,10 @@
 		</nav>
 		<main class="content_container">
 			<div class="account_box">
-				<button classonclick="signOut()">Sign out</button>
+				<p>youremail@website.com</p>
+				<button class="signout_button" onclick="signOut()">
+					Sign out
+				</button>
 			</div>
 		</main>
 	</body>
