--- a/src/login/index.html
+++ b/src/login/index.html
@@ -3,12 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="./styles/version_control_style.css"
-		/>
-		<title>Demodel</title>
+		<link rel="stylesheet" type="text/css" href="./styles/auth_style.css" />
+		<title>Sign Up</title>
 		<link rel="shortcut icon" href="assets/favicon.svg" type="image/svg" />
 	</head>
 	<body>
@@ -34,30 +30,45 @@
 				</button>
 			</div>
 		</nav>
-		<main class="content_container">
-			<div class="side_nav">
+		<div class="auth_container">
+			<div class="auth_box">
+				<div class="welcome_text">
+					<span class="emoji">😍</span>
+					<h1 class="auth_title">Hey there!</h1>
+					<p>Ready to not write all your types?</p>
+				</div>
+				<div class="email">
+					<label>Email</label>
+					<input
+						type="email"
+						id="email"
+						class="email_input"
+						placeholder="Your Email"
+					/>
+				</div>
+				<div class="password">
+					<label>Password</label>
+					<input
+						type="password"
+						id="password"
+						class="password_input"
+						placeholder="Secure Password"
+					/>
+				</div>
 				<button
-					onclick="location.href='/dashboard.html'"
-					id="/dashboard.html"
+					class="signin_button"
+					onclick="location.href='/dashboard.html';"
 				>
-					<img src="./assets/gear-settings.svg" />
-				</button>
-				<button
-					onclick="location.href='/models.html'"
-					id="/models.html"
-				>
-					<img src="./assets/sdk-code-icon.svg" />
-				</button>
-				<button
-					onclick="location.href='/version_control.html'"
-					id="/version_control.html"
-				>
-					<img src="./assets/git-compare.svg" />
+					Sign In
 				</button>
 			</div>
-
-			<div class="content_box">Button to push to GitHub</div>
-		</main>
+		</div>
 	</body>
 	<footer>Copyleft: Demodel Corp.</footer>
+
+	<script>
+		function signIn() {
+			// Implement sign in logic
+		}
+	</script>
 </html>
