--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Foxxi</title>
-        <link rel="icon" href="/public/assets/favicon.ico" />
+        <link rel="icon" href="/assets/favicon.ico" />
     </head>
     <body>
         <noscript
