--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Foxxi</title>
-        <link rel="icon" href="/assets/favicon.ico" />
-    </head>
-    <body>
-        <noscript
-            >Oopsy whoopsy, looks like you need to enable Jabacrip to see this
-            app XD</noscript
-        >
-        <div id="root"></div>
-        <script type="module" src="src/index.jsx"></script>
-    </body>
+	<head>
+		<title>Foxxi</title>
+		<link rel="icon" href="/public/favicon.ico" />
+	</head>
+	<body>
+		<noscript
+			>Oopsy whoopsy, looks like you need to enable Jabacrip to see this
+			app XD</noscript
+		>
+		<div id="root"></div>
+		<script type="module" src="src/index.jsx"></script>
+	</body>
 </html>
